# gspread-dataframe

./: .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  VERSION  gspread_dataframe.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py  tox.ini  travis.secrets.tar.gz.enc
.github/workflows/: python-package.yml
docs/: Makefile  conf.py  index.rst  make.bat
tests/: __init__.py  cell_feed.xml  cell_list.json  gspread_dataframe_integration.py  gspread_dataframe_test.py  mock_worksheet.py  post_cells_expected.xml  sheet_contents_evaluated.json  sheet_contents_formulas.json  test_read.py  tests.config.example  worksheet_feed.xml
