[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta" 

[project]
name = "gspread-dataframe" 
dynamic = ["version"]
description = "Read/write gspread worksheets using pandas DataFrames"
readme = "README.rst"
requires-python = ">=3.0"
license = { file = "LICENSE" }
keywords = ['spreadsheets', 'google-spreadsheets', 'pandas', 'dataframe']
authors = [{ name = "Robin Thomas", email = "rthomas900@gmail.com" }]
maintainers = [{ name = "Robin Thomas", email = "rthomas900@gmail.com" }]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Office/Business :: Financial :: Spreadsheet",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

dependencies = ["gspread>=3.0.0", "pandas>=0.24.0"] 

[project.optional-dependencies]
dev = [
"gitchangelog",
"Sphinx",
"Sphinx-PyPI-upload3",
"twine",
"pytest",
"oauth2client"
]

test = [
"pytest",
"oauth2client",
"pandas",
"tox"
]

[project.urls]
"Homepage" = "https://github.com/robin900/gspread-dataframe"
"Bug Reports" = "https://github.com/robin900/gspread-dataframe/issues"
"Source" = "https://github.com/robin900/gspread-dataframe/"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    'pragma: no cover',
    '\.\.\.',
    'if TYPE_CHECKING:',
    "if __name__ == '__main__':",
]

